--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
 
         <main class="content">
 
-            <!-- <section class="lead">
+            <section class="lead">
                 <h1 class="lead__title">Путешествия по России</h1>
-                <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+                <p class="lead__subtitle">Настоящая страна не в выпусках<br>новостей, а здесь.</p>
                 <img src="images/lead-polka.jpg" alt="Девушка лежит на полке" class="lead__image">
                 <p class="lead__caption">ваша полка — верхняя</p>
-            </section> -->
+            </section>
 
-            <section class="intro">
+            <!-- <section class="intro">
                 <h2 class="intro__title">Чего мы там не видели?</h2>
                 <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36%
                     планируют провести отпуск в
@@ -50,7 +50,8 @@
                     <li>Природных заповедников<span class="intro__list_span"> 105</span></li>
                     <li>Аэропортов<span class="intro__list_span"> 241</span></li>
                 </ul>
-            </section>
+                
+            </section> -->
 
         </main>
 
