--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
 
         <main class="content">
 
-            <section class="lead">
+            <!-- <section class="lead">
                 <h1 class="lead__title">Путешествия по России</h1>
                 <p class="lead__subtitle">Настоящая страна не в выпусках<br>новостей, а здесь.</p>
                 <img src="images/lead-polka.jpg" alt="Девушка лежит на полке" class="lead__image">
                 <p class="lead__caption">ваша полка — верхняя</p>
             </section>
 
-            <!-- <section class="intro">
+            <section class="intro">
                 <h2 class="intro__title">Чего мы там не видели?</h2>
                 <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36%
                     планируют провести отпуск в
@@ -53,6 +53,20 @@
                 
             </section> -->
 
+            <section class="photo-grid">
+                <img src="./images/photo-grid-train.jpg" alt="Фото из путешествия" class="photo-grid__item">
+                <img src="./images/photo-grid-atharva-tulsi.jpg" alt="Фото из путешествия" class="photo-grid__item">
+                <img src="./images/photo-grid-tuman.jpg" alt="Фото из путешествия" class="photo-grid__item">
+                <img src="./images/photo-grid-sochi.jpg" alt="Фото из путешествия" class="photo-grid__item">
+                <img src="./images/photo-grid-arisa.jpg" alt="Фото из путешествия" class="photo-grid__item">
+                <img src="./images/photo-grid-baikal.jpg" alt="Фото из путешествия" class="photo-grid__item">
+                <img src="./images/photo-grid-elbrus.jpg" alt="Фото из путешествия" class="photo-grid__item">
+                <img src="./images/photo-grid-kondratiev.jpg" alt="Фото из путешествия" class="photo-grid__item">
+                <img src="./images/photo-grid-kamchatka-1.jpg" alt="Фото из путешествия" class="photo-grid__item">
+                <img src="./images/photo-grid-kamchatka-2.jpg" alt="Фото из путешествия" class="photo-grid__item">
+                <img src="./images/photo-grid-baikal-2.jpg" alt="Фото из путешествия" class="photo-grid__item">
+                <img src="./images/photo-grid-ergaki.jpg" alt="Фото из путешествия" class="photo-grid__item">         
+            </section>
         </main>
 
 
