--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 
         <main class="content">
 
-            <section class="lead">
+            <!-- <section class="lead">
                 <h1 class="lead__title">Путешествия по России</h1>
                 <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
                 <img src="images/lead-polka.jpg" alt="Девушка лежит на полке" class="lead__image">
                 <p class="lead__caption">ваша полка — верхняя</p>
-            </section>
+            </section> -->
 <!-- 
             <section class="intro">
                 <h2 class="intro__title">Чего мы там не видели?</h2>
@@ -167,7 +167,6 @@
                     <h2 class="cover__title">До Байкала «на собаках»</h2>
                     <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала
                         на электричках.</p>
-                        
                 </a>
             </section>
         </main>
