--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Путешествия по России</title>
 </head>
 
-<body>
+<body >
     <div class="page">
 
         <header class="header">
@@ -26,13 +26,13 @@
 
         <main class="content">
 
-            <!-- <section class="lead">
-                <h1 class="lead__title">Путешествия по России</h1>
-                <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-                <img src="images/lead-polka.jpg" alt="Девушка лежит на полке" class="lead__image">
+            <section class="lead">
+                <h1 class="lead__title">Путешествия по&nbsp;России</h1>
+                <p class="lead__subtitle">Настоящая&nbsp;страна&nbsp;не&nbsp;в&nbsp;выпусках новостей, а&nbsp;здесь.</p>
+                <img src="images/lead-polka.jpg" alt="Карта пути" class="lead__image">
                 <p class="lead__caption">ваша полка — верхняя</p>
-            </section> -->
-<!-- 
+            </section>
+
             <section class="intro">
                 <h2 class="intro__title">Чего мы там не видели?</h2>
                 <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36%
@@ -50,7 +50,7 @@
                     <li>Природных заповедников<span class="intro__list_span"> 105</span></li>
                     <li>Аэропортов<span class="intro__list_span"> 241</span></li>
                 </ul>
-                
+
             </section>
 
             <section class="photo-grid">
@@ -66,7 +66,7 @@
                 <img src="./images/photo-grid-kamchatka-2.jpg" alt="Фото из путешествия" class="photo-grid__item">
                 <img src="./images/photo-grid-baikal-2.jpg" alt="Фото из путешествия" class="photo-grid__item">
                 <img src="./images/photo-grid-ergaki.jpg" alt="Фото из путешествия" class="photo-grid__item">
-            </section> 
+            </section>
 
             <section class="places">
                 <article class="place">
@@ -93,7 +93,8 @@
                     <img class="place__image" src="./images/place-kolsky.jpg" alt="Изображение">
                     <div class="place__website">
                         <p class="place__url">url</p>
-                        <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National
+                        <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
+                            target="_blank">National
                             Geographic</a>
                     </div>
                     <div class="place__paragraphes">
@@ -112,7 +113,8 @@
                     <img class="place__image" src="./images/place-altai.jpg" alt="Изображение">
                     <div class="place__website">
                         <p class="place__url">url</p>
-                        <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
+                        <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822"
+                            target="_blank">Facebook</a>
                     </div>
                     <div class="place__paragraphes">
                         <p class="place__paragraph">Алтай — одно из красивейших мест в России.
@@ -125,14 +127,14 @@
                             края.</p>
                     </div>
                 </article>
-                               <article class="place">
+                <article class="place">
                     <h2 class="place__title">Зимний Байкал</h2>
                     <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Изображение">
                     <div class="place__website">
                         <p class="place__url">url</p>
                         <a class="place__link" href="https://vk.com/baikalmile"
                             target="_blank">https://vk.com/baikalmile</a>
-                        </div>
+                    </div>
                     <div class="place__paragraphes">
                         <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро
                             в мире. Многие также знают, что это самый большой источник пресной воды и одно из
@@ -160,9 +162,9 @@
                             в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
                     </div>
                 </article>
-            </section>  -->
+            </section>
 
-           <section class="cover">
+            <section class="cover">
                 <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank">
                     <h2 class="cover__title">До Байкала «на собаках»</h2>
                     <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала
@@ -170,6 +172,19 @@
                 </a>
             </section>
         </main>
+
+        <footer class="footer">
+            <nav class="footer__nav">
+                <ul class="footer__links">
+                    <li><a class="footer__link" href="https://yandex.ru/maps"  target="_blank">Карты</a></li>
+                    <li><a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a></li>
+                    <li><a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a></li>
+                    <li><a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a></li>
+                    <li><a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествие</a></li>
+                </ul>
+            </nav>
+            <p class="footer__copyright">© 2020. Александр Молоканов</p>
+        </footer>
 
     </div>
 </body>
