--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="page">
 
-        <!-- <header class="header">
+        <header class="header">
             <img class="header__logo" src="images/header-logo.svg" alt="Логотип">
             <ul class="header__lang-links">
                 <li>
@@ -66,7 +66,7 @@
                 <img src="./images/photo-grid-kamchatka-2.jpg" alt="Фото из путешествия" class="photo-grid__item">
                 <img src="./images/photo-grid-baikal-2.jpg" alt="Фото из путешествия" class="photo-grid__item">
                 <img src="./images/photo-grid-ergaki.jpg" alt="Фото из путешествия" class="photo-grid__item">
-            </section> -->
+            </section>
 
             <section class="places">
                 <article class="place">
@@ -79,13 +79,10 @@
                     <div class="place__paragraphes">
                         <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
                             горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского
-                            моря с другой. Уникальная природная зона на краю российского анклава.</p>
-                        <p class="place__paragraph">На этом Калининградская область не заканчивается. Для
-                            путешественника и исследователя там же по соседству — самая западная точка России,
-                            Балтийская коса, — и
-                            немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает
-                            суету,
-                            окуная в спокойствие природы и запах стального, прохладного моря.</p>
+                            моря с другой. Уникальная природная зона на&nbsp;pкраю российского анклава.</p>
+                        <p class="place__paragraph">На этом Калининградская область не заканчивается. Для&nbsp;путешественника и&nbspисследователя там же по&nbsp;соседству — самая западная точка России,
+                            Балтийская коса, — и&nbsp;немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает
+                            суету, окуная в&nbsp;спокойствие природы и&nbsp;запах стального,&nbsp;прохладного моря.</p>
                     </div>
                 </article>
                 <article class="place">
@@ -99,7 +96,7 @@
                     </div>
                     <div class="place__paragraphes">
                         <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра,
-                            от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.
+                            от которой на юг — тайга, а&nbsp;на север — Ледовитый океан, прикидывающийся Баренцевым морем.
                         </p>
                         <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического
                             фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний
@@ -119,11 +116,11 @@
                     <div class="place__paragraphes">
                         <p class="place__paragraph">Алтай — одно из красивейших мест в России.
                             В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами,
-                            горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым
+                            горные реки и озёра. А&nbsp;если вы откроете в автомобиле окна, сможете познакомиться с невидимым
                             чудом здешних мест — горным воздухом.</p>
                         <p class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так
                             вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами
-                            летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского
+                            летают орлы, а&nbsp;на равнинах пасутся косули. И&nbsp;знаменитые манулы — тоже обитатели Алтайского
                             края.</p>
                     </div>
                 </article>
@@ -137,9 +134,9 @@
                     </div>
                     <div class="place__paragraphes">
                         <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро
-                            в мире. Многие также знают, что это самый большой источник пресной воды и одно из
-                            красивейших мест в России.</p>
-                        <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований
+                            в мире. Многие также знают, что это самый большой источник пресной воды и&nbsp;одно из
+                            красивейших мест в&nbsp;России.</p>
+                        <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований
                             по скийорингу. Это такой вид спорта, когда лыжник привязывает себя
                             к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019
                             года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
@@ -153,7 +150,7 @@
                         <a class="place__link" href="http://vodlozero.ru/" target="_blank">http://vodlozero.ru/</a>
                     </div>
                     <div class="place__paragraphes">
-                        <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
+                        <p class="place__paragraph">Сибирь заканчивается не на Урале, а&nbsp;в&nbsp;Карелии: образующая тайгу
                             сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров —
                             леса карельских национальных парков из-за непроходимых болот никогда не знали топора.
                             Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему
@@ -164,11 +161,10 @@
                 </article>
             </section>
 
-            <!-- <section class="cover">
+            <section class="cover">
                 <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank">
-                    <h2 class="cover__title">До Байкала «на собаках»</h2>
-                    <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала
-                        на электричках.</p>
+                    <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
+                    <p class="cover__subtitle">По мотивам учебной темы о&nbsp;Транссибе&nbsp;—&nbsp;путешествие от&nbsp;столицы&nbsp;до&nbsp;Байкала на электричках.</p>
                 </a>
             </section>
         </main>
@@ -183,8 +179,8 @@
                     <li><a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествие</a></li>
                 </ul>
             </nav>
-            <p class="footer__copyright">© 2020. Александр Молоканов</p>
-        </footer> -->
+            <p class="footer__copyright">©&nbsp;2020.&nbsp;Александр&nbsp;Молоканов</p>
+        </footer>
 
     </div>
 </body>
