--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
                         <a class="place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
                     </div>
                     <div class="place__paragraphes">
-                        <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
+                        <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете&nbsp;увидеть два водных
                             горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского
-                            моря с другой. Уникальная природная зона на&nbsp;pкраю российского анклава.</p>
+                            моря с другой. Уникальная природная зона на&nbsp;краю российского анклава.</p>
                         <p class="place__paragraph">На этом Калининградская область не заканчивается. Для&nbsp;путешественника и&nbspисследователя там же по&nbsp;соседству — самая западная точка России,
                             Балтийская коса, — и&nbsp;немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает
                             суету, окуная в&nbsp;спокойствие природы и&nbsp;запах стального,&nbsp;прохладного моря.</p>
@@ -102,7 +102,7 @@
                             фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний
                             об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой
                             скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние
-                            начинает сбываться с билетом в Мурманск.</p>
+                            начинает сбываться с билетом в&nbsp;Мурманск.</p>
                     </div>
                 </article>
                 <article class="place">
