--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="page">
 
-        <header class="header">
+        <!-- <header class="header">
             <img class="header__logo" src="images/header-logo.svg" alt="Логотип">
             <ul class="header__lang-links">
                 <li>
@@ -66,7 +66,7 @@
                 <img src="./images/photo-grid-kamchatka-2.jpg" alt="Фото из путешествия" class="photo-grid__item">
                 <img src="./images/photo-grid-baikal-2.jpg" alt="Фото из путешествия" class="photo-grid__item">
                 <img src="./images/photo-grid-ergaki.jpg" alt="Фото из путешествия" class="photo-grid__item">
-            </section>
+            </section> -->
 
             <section class="places">
                 <article class="place">
@@ -161,7 +161,7 @@
                 </article>
             </section>
 
-            <section class="cover">
+            <!-- <section class="cover">
                 <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank">
                     <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
                     <p class="cover__subtitle">По мотивам учебной темы о&nbsp;Транссибе&nbsp;—&nbsp;путешествие от&nbsp;столицы&nbsp;до&nbsp;Байкала на электричках.</p>
@@ -180,7 +180,7 @@
                 </ul>
             </nav>
             <p class="footer__copyright">©&nbsp;2020.&nbsp;Александр&nbsp;Молоканов</p>
-        </footer>
+        </footer> -->
 
     </div>
 </body>
