--- a/index.html
+++ b/index.html
@@ -77,11 +77,15 @@
                         <a class="place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
                     </div>
                     <div class="place__paragraphes">
-                        <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете&nbsp;увидеть два водных
+                        <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете&nbsp;увидеть два
+                            водных
                             горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского
                             моря с другой. Уникальная природная зона на&nbsp;краю российского анклава.</p>
-                        <p class="place__paragraph">На этом Калининградская область не заканчивается. Для&nbsp;путешественника и&nbsp;исследователя там же по&nbsp;соседству — самая западная точка России,
-                            Балтийская коса, — и&nbsp;немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает
+                        <p class="place__paragraph">На этом Калининградская область не заканчивается.
+                            Для&nbsp;путешественника и&nbsp;исследователя там же по&nbsp;соседству — самая западная
+                            точка России,
+                            Балтийская коса, — и&nbsp;немецкое наследие россыпи небольших приморских городов. Атмосфера
+                            здешних мест исключает
                             суету, окуная в&nbsp;спокойствие природы и&nbsp;запах стального,&nbsp;прохладного моря.</p>
                     </div>
                 </article>
@@ -96,7 +100,8 @@
                     </div>
                     <div class="place__paragraphes">
                         <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра,
-                            от которой на юг — тайга, а&nbsp;на север — Ледовитый океан, прикидывающийся Баренцевым морем.
+                            от которой на юг — тайга, а&nbsp;на север — Ледовитый океан, прикидывающийся Баренцевым
+                            морем.
                         </p>
                         <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического
                             фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний
@@ -116,11 +121,13 @@
                     <div class="place__paragraphes">
                         <p class="place__paragraph">Алтай — одно из красивейших мест в России.
                             В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами,
-                            горные реки и озёра. А&nbsp;если вы откроете в автомобиле окна, сможете познакомиться с невидимым
+                            горные реки и озёра. А&nbsp;если вы откроете в автомобиле окна, сможете познакомиться с
+                            невидимым
                             чудом здешних мест — горным воздухом.</p>
                         <p class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так
                             вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами
-                            летают орлы, а&nbsp;на равнинах пасутся косули. И&nbsp;знаменитые манулы — тоже обитатели Алтайского
+                            летают орлы, а&nbsp;на равнинах пасутся косули. И&nbsp;знаменитые манулы — тоже обитатели
+                            Алтайского
                             края.</p>
                     </div>
                 </article>
@@ -150,7 +157,8 @@
                         <a class="place__link" href="http://vodlozero.ru/" target="_blank">http://vodlozero.ru/</a>
                     </div>
                     <div class="place__paragraphes">
-                        <p class="place__paragraph">Сибирь заканчивается не на Урале, а&nbsp;в&nbsp;Карелии: образующая тайгу
+                        <p class="place__paragraph">Сибирь заканчивается не на Урале, а&nbsp;в&nbsp;Карелии: образующая
+                            тайгу
                             сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров —
                             леса карельских национальных парков из-за непроходимых болот никогда не знали топора.
                             Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему
@@ -164,7 +172,8 @@
             <section class="cover">
                 <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank">
                     <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
-                    <p class="cover__subtitle">По мотивам учебной темы о&nbsp;Транссибе&nbsp;—&nbsp;путешествие от&nbsp;столицы&nbsp;до&nbsp;Байкала на электричках.</p>
+                    <p class="cover__subtitle">По мотивам учебной темы о&nbsp;Транссибе&nbsp;—&nbsp;путешествие
+                        от&nbsp;столицы&nbsp;до&nbsp;Байкала на электричках.</p>
                 </a>
             </section>
         </main>
@@ -184,3 +193,5 @@
 
     </div>
 </body>
+
+</html>
