--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./pages/index.css">
+    <link rel="stylesheet" href="pages/index.css">
     <title>Путешествия по России</title>
 </head>
 
@@ -50,7 +50,6 @@
                     <li>Природных заповедников<span class="intro__list-span"> 105</span></li>
                     <li>Аэропортов<span class="intro__list-span"> 241</span></li>
                 </ul>
-
             </section>
 
             <section class="photo-grid">
