--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="pages/index.css">
+    <link rel="stylesheet" href="./pages/index.css">
     <title>Путешествия по России</title>
 </head>
 
@@ -13,7 +13,7 @@
     <div class="page">
 
         <header class="header">
-            <img class="header__logo" src="images/header-logo.svg" alt="Логотип">
+            <img class="header__logo" src="./images/header-logo.svg" alt="Логотип">
             <ul class="header__lang-links">
                 <li>
                     <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
@@ -29,7 +29,7 @@
             <section class="lead">
                 <h1 class="lead__title">Путешествия по&nbsp;России</h1>
                 <p class="lead__subtitle">Настоящая&nbsp;страна&nbsp;не&nbsp;в&nbsp;выпусках новостей, а&nbsp;здесь.</p>
-                <img src="images/lead-polka.jpg" alt="Карта пути" class="lead__image">
+                <img src="./images/lead-polka.jpg" alt="Карта пути" class="lead__image">
                 <p class="lead__caption">ваша полка — верхняя</p>
             </section>
 
