--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@
             <section class="lead">
                 <h1 class="lead__title">Путешествия по&nbsp;России</h1>
                 <p class="lead__subtitle">Настоящая&nbsp;страна&nbsp;не&nbsp;в&nbsp;выпусках новостей, а&nbsp;здесь.</p>
-                <img src="./images/lead-polka.jpg" alt="Карта пути" class="lead__image">
-                <p class="lead__caption">ваша полка — верхняя</p>
+                <figure class="lead__figure">  
+                    <img src="./images/lead-polka.jpg" alt="Карта пути" class="lead__image">
+                    <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
+                </figure>
+
             </section>
 
             <section class="intro">
